# unicode-charname

./: Cargo.toml  README.md
scripts/: unicode.py
src/: jamo.rs  lib.rs  reserved.rs  tables.rs
tests/: test.rs
